--- a/Lazerunner/LazeRunner.html
+++ b/Lazerunner/LazeRunner.html
@@ -104,17 +104,11 @@
   <div id="version">Versão 1.2</div>
 
   <script>
-    // Bloquear clique direito
-    document.addEventListener('contextmenu', (e) => {
-      e.preventDefault();
-      alert('O clique com o botão direito está desativado para proteger o jogo.');
-    });
-
-    // Bloquear tecla F12
+    // Proteções
+    document.addEventListener('contextmenu', (e) => e.preventDefault());
     document.addEventListener('keydown', (e) => {
       if (e.key === 'F12' || e.keyCode === 123) {
         e.preventDefault();
-        alert('As ferramentas de desenvolvedor estão desativadas para proteger o jogo.');
       }
     });
 
@@ -126,16 +120,7 @@
     const restartButton = document.getElementById('restartButton');
     const saveRankingButton = document.getElementById('saveRankingButton');
     const finalScoreText = document.getElementById('finalScore');
-
-    let gameStarted = false;
-    let scoreSaved = false;
-
-    const boundary = {
-      x: 50,
-      y: 50,
-      width: canvas.width - 100,
-      height: canvas.height - 100
-    };
+    const rankingList = document.getElementById('rankingList');
 
     const player = {
       x: canvas.width / 2,
@@ -145,182 +130,90 @@
       immune: false,
       immuneTime: 0,
       immuneDuration: 1500,
-      immuneCooldown: 2000,
+      immuneCooldown: 750,
       lastImmuneEnd: 0
     };
 
+    let keys = {};
     let bars = [];
     let score = 0;
+    let gameStarted = false;
     let gameOver = false;
-
-    let keys = {
-      ArrowUp: false,
-      ArrowDown: false,
-      ArrowLeft: false,
-      ArrowRight: false,
-      'w': false, 'W': false,
-      's': false, 'S': false,
-      'a': false, 'A': false,
-      'd': false, 'D': false,
-      ' ': false,
-      'Enter': false
-    };
 
     let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
 
-    function saveRanking() {
-      try {
-        localStorage.setItem('rankings', JSON.stringify(rankings));
-        console.log('Ranking salvo no localStorage:', rankings);
-      } catch (e) {
-        console.error('Erro ao salvar ranking:', e);
-        alert('Erro ao salvar a pontuação. Tente novamente.');
-      }
+    function saveRanking(name, score) {
+      rankings.push({ name, score });
+      rankings.sort((a, b) => b.score - a.score);
+      rankings = rankings.slice(0, 10);
+      localStorage.setItem('rankings', JSON.stringify(rankings));
+      updateRanking();
     }
 
     function updateRanking() {
-      const rankingList = document.getElementById('rankingList');
       rankingList.innerHTML = '';
-      rankings.sort((a, b) => b.score - a.score);
-      rankings.slice(0, 10).forEach(entry => {
+      rankings.forEach(entry => {
         const li = document.createElement('li');
         li.textContent = `${entry.name} - ${entry.score}`;
         rankingList.appendChild(li);
       });
-      console.log('Ranking atualizado na interface:', rankings);
     }
 
-    document.addEventListener('keydown', (e) => {
-      if (e.key in keys) {
-        keys[e.key] = true;
-
-        if (e.key === ' ' && !player.immune && Date.now() - player.lastImmuneEnd >= player.immuneCooldown) {
-          player.immune = true;
-          player.immuneTime = Date.now();
-        }
-
-        if (e.key === 'Enter' && gameOver) {
-          resetGame();
-        }
-      }
-    });
-
-    document.addEventListener('keyup', (e) => {
-      if (e.key in keys) {
-        keys[e.key] = false;
-      }
-    });
-
-    playButton.addEventListener('click', () => {
-      startScreen.classList.add('hidden');
-      gameStarted = true;
-      resetGame();
-    });
-
-    restartButton.addEventListener('click', () => {
-      gameOverScreen.classList.add('hidden');
-      resetGame();
-    });
-
-    saveRankingButton.addEventListener('click', () => {
-      if (scoreSaved) {
-        console.log('Pontuação já salva, ignorando clique.');
-        return;
-      }
-      const name = prompt('Digite seu nome para salvar sua pontuação:');
-      if (name && name.trim()) {
-        const trimmedName = name.trim();
-        rankings.push({ name: trimmedName, score });
-        saveRanking();
-        updateRanking();
-        scoreSaved = true;
-        saveRankingButton.disabled = true;
-        saveRankingButton.textContent = 'Salvo';
-        alert('Pontuação salva com sucesso!');
-        console.log('Pontuação salva:', { name: trimmedName, score });
-      } else if (name !== null) {
-        alert('Por favor, insira um nome válido (não vazio).');
-        console.log('Nome inválido inserido:', name);
-      } else {
-        console.log('Prompt cancelado pelo usuário.');
-      }
-    });
-
     function resetGame() {
+      bars = [];
       player.x = canvas.width / 2;
       player.y = canvas.height / 2;
       player.immune = false;
       score = 0;
-      bars = [];
       gameOver = false;
-      scoreSaved = false;
+      gameStarted = true;
       saveRankingButton.disabled = false;
-      saveRankingButton.textContent = 'Salvar no Ranking';
-      lastTime = 0;
       gameOverScreen.classList.add('hidden');
-      console.log('Jogo reiniciado, botão de ranking reativado.');
-      requestAnimationFrame(gameLoop);
     }
 
     function createBar() {
       const direction = Math.floor(Math.random() * 4);
-      const thickness = 30;
-      const length = Math.random() * 400 + 200;
-      const speed = 2.0 + Math.random() * 1.8;
+      let bar = { x: 0, y: 0, width: 0, height: 0, speedX: 0, speedY: 0 };
+      const size = 100;
 
-      let bar = {};
-
-      switch (direction) {
-        case 0: // left to right (vertical)
-          bar = { x: -thickness, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: speed, dy: 0 };
-          break;
-        case 1: // right to left (vertical)
-          bar = { x: canvas.width, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: -speed, dy: 0 };
-          break;
-        case 2: // top to bottom (horizontal)
-          bar = { x: Math.random() * (canvas.width - length), y: -thickness, width: length, height: thickness, dx: 0, dy: speed };
-          break;
-        case 3: // bottom to top (horizontal)
-          bar = { x: Math.random() * (canvas.width - length), y: canvas.height, width: length, height: thickness, dx: 0, dy: -speed };
-          break;
+      if (direction === 0) { // esquerda
+        bar = { x: -size, y: Math.random() * canvas.height, width: size, height: 20, speedX: 6, speedY: 0 };
+      } else if (direction === 1) { // cima
+        bar = { x: Math.random() * canvas.width, y: -size, width: 20, height: size, speedX: 0, speedY: 6 };
+      } else if (direction === 2) { // direita
+        bar = { x: canvas.width + size, y: Math.random() * canvas.height, width: size, height: 20, speedX: -6, speedY: 0 };
+      } else if (direction === 3) { // baixo
+        bar = { x: Math.random() * canvas.width, y: canvas.height + size, width: 20, height: size, speedX: 0, speedY: -6 };
       }
-
       bars.push(bar);
     }
 
     function movePlayer(dt) {
-      let dx = 0;
-      let dy = 0;
+      const speed = player.speed * dt;
+      if (keys['ArrowUp'] || keys['w']) player.y -= speed;
+      if (keys['ArrowDown'] || keys['s']) player.y += speed;
+      if (keys['ArrowLeft'] || keys['a']) player.x -= speed;
+      if (keys['ArrowRight'] || keys['d']) player.x += speed;
 
-      if (keys.ArrowUp || keys.w || keys.W) dy -= 1;
-      if (keys.ArrowDown || keys.s || keys.S) dy += 1;
-      if (keys.ArrowLeft || keys.a || keys.A) dx -= 1;
-      if (keys.ArrowRight || keys.d || keys.D) dx += 1;
-
-      if (dx !== 0 || dy !== 0) {
-        const len = Math.hypot(dx, dy);
-        dx = (dx / len) * player.speed;
-        dy = (dy / len) * player.speed;
-
-        player.x += dx;
-        player.y += dy;
-
-        player.x = Math.max(boundary.x + player.radius, Math.min(player.x, boundary.x + boundary.width - player.radius));
-        player.y = Math.max(boundary.y + player.radius, Math.min(player.y, boundary.y + boundary.height - player.radius));
-      }
+      // Limites
+      player.x = Math.max(player.radius, Math.min(canvas.width - player.radius, player.x));
+      player.y = Math.max(player.radius, Math.min(canvas.height - player.radius, player.y));
     }
 
     function moveBars(dt) {
       bars.forEach(bar => {
-        bar.x += bar.dx * dt;
-        bar.y += bar.dy * dt;
+        bar.x += bar.speedX * dt;
+        bar.y += bar.speedY * dt;
       });
+      bars = bars.filter(bar =>
+        bar.x + bar.width > 0 && bar.x < canvas.width &&
+        bar.y + bar.height > 0 && bar.y < canvas.height
+      );
     }
 
     function checkCollisions() {
-      if (player.immune) return;
       for (let bar of bars) {
-        if (
+        if (!player.immune &&
           player.x + player.radius > bar.x &&
           player.x - player.radius < bar.x + bar.width &&
           player.y + player.radius > bar.y &&
@@ -332,21 +225,15 @@
     }
 
     function manageImmunity() {
-      if (player.immune && Date.now() - player.immuneTime > player.immuneDuration) {
+      const now = Date.now();
+      if (player.immune && now - player.immuneTime > player.immuneDuration) {
         player.immune = false;
-        player.lastImmuneEnd = Date.now();
+        player.lastImmuneEnd = now;
       }
     }
 
     function draw() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      if (!gameStarted) return;
-
-      // Área de jogo
-      ctx.strokeStyle = 'white';
-      ctx.lineWidth = 2;
-      ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
 
       // Jogador
       ctx.beginPath();
@@ -363,9 +250,7 @@
 
       // Barras
       ctx.fillStyle = 'red';
-      bars.forEach(bar => {
-        ctx.fillRect(bar.x, bar.y, bar.width, bar.height);
-      });
+      bars.forEach(bar => ctx.fillRect(bar.x, bar.y, bar.width, bar.height));
 
       // HUD
       const now = Date.now();
@@ -421,6 +306,35 @@
 
       requestAnimationFrame(gameLoop);
     }
+
+    playButton.onclick = () => {
+      startScreen.classList.add('hidden');
+      resetGame();
+    };
+
+    restartButton.onclick = () => {
+      resetGame();
+    };
+
+    saveRankingButton.onclick = () => {
+      const name = prompt('Digite seu nome para salvar sua pontuação:');
+      if (name) {
+        saveRanking(name, score);
+        saveRankingButton.disabled = true;
+      }
+    };
+
+    document.addEventListener('keydown', (e) => {
+      keys[e.key] = true;
+      if (e.key === ' ' && !player.immune && Date.now() - player.lastImmuneEnd >= player.immuneCooldown) {
+        player.immune = true;
+        player.immuneTime = Date.now();
+      }
+    });
+
+    document.addEventListener('keyup', (e) => {
+      keys[e.key] = false;
+    });
 
     updateRanking();
     requestAnimationFrame(gameLoop);
