--- a/Lazerunner/LazeRunner.html
+++ b/Lazerunner/LazeRunner.html
@@ -21,6 +21,8 @@
     }
     #ranking {
       width: 250px;
+      max-height: 400px;
+      overflow-y: auto;
     }
     #ranking h2 {
       margin-top: 0;
@@ -29,7 +31,7 @@
       position: absolute;
       bottom: 10px;
       left: 10px;
-      font-size: 24px;
+      font-size: 18px;
       color: #aaa;
     }
     #version {
@@ -92,29 +94,28 @@
   <div id="gameOverScreen" class="hidden">
     <h1>Game Over</h1>
     <p id="finalScore"></p>
-    <button id="restartButton">Restart</button>
+    <button id="restartButton">Reiniciar</button>
     <button id="saveRankingButton">Salvar no Ranking</button>
   </div>
 
   <div id="footer">
-    Mover: Setas ou WASD<br />
-    Imunidade: Barra de espaço<br />
+    Controles: W↑ | S↓ | A← | D→<br />
+    Imunidade: Barra de Espaço<br />
     Reiniciar: Enter
   </div>
-  <div id="version">Versão 1.2</div>
+  <div id="version">Versão 1.2.1</div>
 
   <script>
-    // Bloquear clique direito
+    // Bloquear clique direito e F12
     document.addEventListener('contextmenu', (e) => {
       e.preventDefault();
-      alert('O clique com o botão direito está desativado para proteger o jogo.');
+      alert('Clique direito desativado para proteger o jogo.');
     });
 
-    // Bloquear tecla F12
     document.addEventListener('keydown', (e) => {
       if (e.key === 'F12' || e.keyCode === 123) {
         e.preventDefault();
-        alert('As ferramentas de desenvolvedor estão desativadas para proteger o jogo.');
+        alert('Ferramentas de desenvolvedor desativadas.');
       }
     });
 
@@ -142,6 +143,7 @@
       y: canvas.height / 2,
       radius: 20,
       speed: 5,
+      scale: 1.0,
       immune: false,
       immuneTime: 0,
       immuneDuration: 1500,
@@ -152,18 +154,12 @@
     let bars = [];
     let score = 0;
     let gameOver = false;
+    let lastTime = 0;
 
     let keys = {
-      ArrowUp: false,
-      ArrowDown: false,
-      ArrowLeft: false,
-      ArrowRight: false,
-      'w': false, 'W': false,
-      's': false, 'S': false,
-      'a': false, 'A': false,
-      'd': false, 'D': false,
-      ' ': false,
-      'Enter': false
+      ArrowUp: false, ArrowDown: false, ArrowLeft: false, ArrowRight: false,
+      w: false, W: false, s: false, S: false, a: false, A: false, d: false, D: false,
+      ' ': false, Enter: false
     };
 
     let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
@@ -171,44 +167,34 @@
     function saveRanking() {
       try {
         localStorage.setItem('rankings', JSON.stringify(rankings));
-        console.log('Ranking salvo no localStorage:', rankings);
       } catch (e) {
         console.error('Erro ao salvar ranking:', e);
-        alert('Erro ao salvar a pontuação. Tente novamente.');
+        alert('Erro ao salvar pontuação. Tente novamente.');
       }
     }
 
     function updateRanking() {
       const rankingList = document.getElementById('rankingList');
       rankingList.innerHTML = '';
-      rankings.sort((a, b) => b.score - a.score);
-      rankings.slice(0, 10).forEach(entry => {
+      rankings.sort((a, b) => b.score - a.score).slice(0, 10).forEach((entry, index) => {
         const li = document.createElement('li');
-        li.textContent = `${entry.name} - ${entry.score}`;
+        li.textContent = `${index + 1}. ${entry.name} - ${entry.score}`;
         rankingList.appendChild(li);
       });
-      console.log('Ranking atualizado na interface:', rankings);
     }
 
     document.addEventListener('keydown', (e) => {
-      if (e.key in keys) {
-        keys[e.key] = true;
-
-        if (e.key === ' ' && !player.immune && Date.now() - player.lastImmuneEnd >= player.immuneCooldown) {
-          player.immune = true;
-          player.immuneTime = Date.now();
-        }
-
-        if (e.key === 'Enter' && gameOver) {
-          resetGame();
-        }
+      if (e.key in keys) keys[e.key] = true;
+      if (e.key === ' ' && !player.immune && Date.now() - player.lastImmuneEnd >= player.immuneCooldown) {
+        player.immune = true;
+        player.immuneTime = Date.now();
+        player.scale = 1.1; // Aumenta 10%
       }
+      if (e.key === 'Enter' && gameOver) resetGame();
     });
 
     document.addEventListener('keyup', (e) => {
-      if (e.key in keys) {
-        keys[e.key] = false;
-      }
+      if (e.key in keys) keys[e.key] = false;
     });
 
     playButton.addEventListener('click', () => {
@@ -223,32 +209,25 @@
     });
 
     saveRankingButton.addEventListener('click', () => {
-      if (scoreSaved) {
-        console.log('Pontuação já salva, ignorando clique.');
-        return;
-      }
+      if (scoreSaved) return;
       const name = prompt('Digite seu nome para salvar sua pontuação:');
       if (name && name.trim()) {
-        const trimmedName = name.trim();
-        rankings.push({ name: trimmedName, score });
+        rankings.push({ name: name.trim(), score });
         saveRanking();
         updateRanking();
         scoreSaved = true;
         saveRankingButton.disabled = true;
         saveRankingButton.textContent = 'Salvo';
         alert('Pontuação salva com sucesso!');
-        console.log('Pontuação salva:', { name: trimmedName, score });
       } else if (name !== null) {
-        alert('Por favor, insira um nome válido (não vazio).');
-        console.log('Nome inválido inserido:', name);
-      } else {
-        console.log('Prompt cancelado pelo usuário.');
+        alert('Insira um nome válido.');
       }
     });
 
     function resetGame() {
       player.x = canvas.width / 2;
       player.y = canvas.height / 2;
+      player.scale = 1.0;
       player.immune = false;
       score = 0;
       bars = [];
@@ -256,9 +235,6 @@
       scoreSaved = false;
       saveRankingButton.disabled = false;
       saveRankingButton.textContent = 'Salvar no Ranking';
-      lastTime = 0;
-      gameOverScreen.classList.add('hidden');
-      console.log('Jogo reiniciado, botão de ranking reativado.');
       requestAnimationFrame(gameLoop);
     }
 
@@ -269,41 +245,36 @@
       const speed = 2.0 + Math.random() * 1.8;
 
       let bar = {};
-
       switch (direction) {
-        case 0: // left to right (vertical)
+        case 0: // Esquerda para direita (vertical)
           bar = { x: -thickness, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: speed, dy: 0 };
           break;
-        case 1: // right to left (vertical)
+        case 1: // Direita para esquerda (vertical)
           bar = { x: canvas.width, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: -speed, dy: 0 };
           break;
-        case 2: // top to bottom (horizontal)
+        case 2: // Cima para baixo (horizontal)
           bar = { x: Math.random() * (canvas.width - length), y: -thickness, width: length, height: thickness, dx: 0, dy: speed };
           break;
-        case 3: // bottom to top (horizontal)
+        case 3: // Baixo para cima (horizontal)
           bar = { x: Math.random() * (canvas.width - length), y: canvas.height, width: length, height: thickness, dx: 0, dy: -speed };
           break;
       }
-
       bars.push(bar);
     }
 
     function movePlayer(dt) {
-      let dx = 0;
-      let dy = 0;
-
+      let dx = 0, dy = 0;
       if (keys.ArrowUp || keys.w || keys.W) dy -= 1;
       if (keys.ArrowDown || keys.s || keys.S) dy += 1;
       if (keys.ArrowLeft || keys.a || keys.A) dx -= 1;
       if (keys.ArrowRight || keys.d || keys.D) dx += 1;
 
-      if (dx !== 0 || dy !== 0) {
+      if (dx || dy) {
         const len = Math.hypot(dx, dy);
         dx = (dx / len) * player.speed;
         dy = (dy / len) * player.speed;
-
-        player.x += dx;
-        player.y += dy;
+        player.x += dx * dt;
+        player.y += dy * dt;
 
         player.x = Math.max(boundary.x + player.radius, Math.min(player.x, boundary.x + boundary.width - player.radius));
         player.y = Math.max(boundary.y + player.radius, Math.min(player.y, boundary.y + boundary.height - player.radius));
@@ -311,6 +282,7 @@
     }
 
     function moveBars(dt) {
+      bars = bars.filter(bar => bar.x + bar.width > 0 && bar.x < canvas.width && bar.y + bar.height > 0 && bar.y < canvas.height);
       bars.forEach(bar => {
         bar.x += bar.dx * dt;
         bar.y += bar.dy * dt;
@@ -319,12 +291,13 @@
 
     function checkCollisions() {
       if (player.immune) return;
+      const scaledRadius = player.radius * player.scale;
       for (let bar of bars) {
         if (
-          player.x + player.radius > bar.x &&
-          player.x - player.radius < bar.x + bar.width &&
-          player.y + player.radius > bar.y &&
-          player.y - player.radius < bar.y + bar.height
+          player.x + scaledRadius > bar.x &&
+          player.x - scaledRadius < bar.x + bar.width &&
+          player.y + scaledRadius > bar.y &&
+          player.y - scaledRadius < bar.y + bar.height
         ) {
           gameOver = true;
         }
@@ -334,6 +307,7 @@
     function manageImmunity() {
       if (player.immune && Date.now() - player.immuneTime > player.immuneDuration) {
         player.immune = false;
+        player.scale = 1.0;
         player.lastImmuneEnd = Date.now();
       }
     }
@@ -350,37 +324,34 @@
 
       // Jogador
       ctx.beginPath();
-      ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
-      ctx.fillStyle = player.immune ? 'yellow' : 'white';
+      ctx.arc(player.x, player.y, player.radius * player.scale, 0, Math.PI * 2);
+      ctx.fillStyle = player.immune ? '#ff0' : '#fff';
       ctx.fill();
       if (player.immune) {
         ctx.beginPath();
-        ctx.arc(player.x, player.y, player.radius + 10, 0, Math.PI * 2);
-        ctx.strokeStyle = 'yellow';
+        ctx.arc(player.x, player.y, (player.radius + 10) * player.scale, 0, Math.PI * 2);
+        ctx.strokeStyle = '#ff0';
         ctx.lineWidth = 3;
         ctx.stroke();
       }
 
       // Barras
-      ctx.fillStyle = 'red';
-      bars.forEach(bar => {
-        ctx.fillRect(bar.x, bar.y, bar.width, bar.height);
-      });
+      ctx.fillStyle = '#f00';
+      bars.forEach(bar => ctx.fillRect(bar.x, bar.y, bar.width, bar.height));
 
       // HUD
       const now = Date.now();
-      const inCooldown = now - player.lastImmuneEnd < player.immuneCooldown;
       const cooldownRemaining = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
       const immunityRemaining = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
 
-      ctx.fillStyle = 'white';
+      ctx.fillStyle = '#fff';
       ctx.font = '24px Arial';
       ctx.textAlign = 'left';
       ctx.fillText(`Pontuação: ${score}`, 10, 30);
-      ctx.fillStyle = 'yellow';
+      ctx.fillStyle = '#ff0';
       ctx.font = '18px Arial';
       ctx.fillText(`Imunidade: ${(immunityRemaining / 1000).toFixed(1)}s`, 180, 28);
-      ctx.fillStyle = inCooldown ? 'gray' : 'green';
+      ctx.fillStyle = cooldownRemaining > 0 ? '#888' : '#0f0';
       ctx.fillText(`Recarga: ${(cooldownRemaining / 1000).toFixed(1)}s`, 340, 28);
 
       if (gameOver) {
@@ -389,17 +360,14 @@
       }
     }
 
-    let lastTime = 0;
-    let lastFrame = 0;
-
     function gameLoop(timestamp) {
       if (!gameStarted || gameOver) {
         draw();
         return;
       }
 
-      const dt = (timestamp - lastFrame) / 16.67;
-      lastFrame = timestamp;
+      const dt = Math.min((timestamp - lastTime) / 16.67, 1); // Limita dt para evitar saltos
+      lastTime = timestamp;
 
       const baseInterval = 2500;
       const speedUp = Math.min(score * 30, 1500);
