--- a/Lazerunner/LazeRunner.html
+++ b/Lazerunner/LazeRunner.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Lazer Runner</title>
+  <title>LazerRunner</title>
   <style>
     body {
       display: flex;
@@ -142,7 +142,7 @@
       x: canvas.width / 2,
       y: canvas.height / 2,
       radius: 20,
-      speed: 3, // Reduzido de 5 para 3
+      speed: 5,
       scale: 1.0,
       immune: false,
       immuneTime: 0,
