--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a href="../index.html" id="Voltar><h2>Voltar</h2></a>
+    <a href="Jogos/Lazerunner/LazeRunner.html" class = "botaodejogo"><i>LazerRunner</i></a>
+    
+</body>
+</html>
 
