--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -96,7 +96,7 @@
   </style>
 </head>
 <body>
-  <button id="backButton" onclick="window.location.href = '../'">Voltar</button>
+  <button id="backButton" onclick="window.location.href = 'Jogos/CentralJogos.html'">Voltar</button>
   <canvas id="gameCanvas" width="900" height="900"></canvas>
   <div id="ranking">
     <h2>Ranking</h2>
