--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../index.html" id="Voltar><h2>Voltar</h2></a>
+    <a href="../index.html"><h1><b>Voltar</b></h1></a>
     <a href="Jogos/Lazerunner/LazeRunner.html" class = "botaodejogo"><i>LazerRunner</i></a>
     
 </body>
