--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="../index.html"><h1><b>Voltar</b></h1></a>
-    <a href="/Lazerunner/LazeRunner.html" class = "botaodejogo"><i>LazerRunner</i></a>
+    <a href="Lazerunner/LazeRunner.html" class = "botaodejogo"><i>LazerRunner</i></a>
     
 </body>
 </html>
