--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogos do Wolf</title>
+    <style>
+        body {
+            background-color: black;
+        }
+        #botaodejogo {
+            padding: 5px;
+            border: white solid:
+
+        }
+
+    </style>
 </head>
 <body>
     <a href="../index.html"><h1><b>Voltar</b></h1></a>
-    <a href="Lazerunner/LazeRunner.html" class = "botaodejogo"><i>LazerRunner</i></a>
+    <a href="Lazerunner/LazeRunner.html" id = "botaodejogo"><i>LazerRunner</i></a>
     
 </body>
 </html>
