--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -10,15 +10,21 @@
         }
         #botaodejogo {
             padding: 5px;
-            border: white solid:
-
+            border: 2px white solid;
+            text-decoration: none;
+            color: solid white;
         }
 
     </style>
 </head>
 <body>
-    <a href="../index.html"><h1><b>Voltar</b></h1></a>
-    <a href="Lazerunner/LazeRunner.html" id = "botaodejogo"><i>LazerRunner</i></a>
+    <div id="Voltar">
+        <a href="../index.html"><h1><b>Voltar</b></h1></a>
+    </div>
+    <div id = "botaodejogo">
+        <a href="Lazerunner/LazeRunner.html"><i>LazerRunner</i></a>
+    </div>
+    
     
 </body>
 </html>
