--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -7,9 +7,14 @@
     <style>
         body {
             background-color: black;
+            text-decoration: none;
+            color: solid white;
         }
         #botaodejogo {
             padding: 5px;
+        }
+
+        #botaodejogo a {
             border: 2px white solid;
             text-decoration: none;
             color: solid white;
