--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -20,6 +20,11 @@
             color: white;
         }
 
+        #Voltar {
+            text-decoration: none;
+            color: white;
+        }
+
     </style>
 </head>
 <body>
@@ -33,4 +38,3 @@
     
 </body>
 </html>
-
