--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -21,6 +21,9 @@
         }
 
         #Voltar {
+            float: left;
+        }
+        #Voltar a {
             text-decoration: none;
             color: white;
         }
@@ -29,10 +32,10 @@
 </head>
 <body>
     <div id="Voltar">
-        <a href="../index.html"><h1><b>Voltar</b></h1></a>
+        <a href="../index.html"><h3><b>Voltar</b></h3></a>
     </div>
     <div id = "botaodejogo">
-        <a href="Lazerunner/LazeRunner.html"><i>LazerRunner</i></a>
+        <a href="Lazerunner/LazeRunner.html"><i><h1>LazerRunner</h1></i></a>
     </div>
     
     
