--- a/Jogos/CentralJogos.html
+++ b/Jogos/CentralJogos.html
@@ -9,9 +9,11 @@
             background-color: black;
             text-decoration: none;
             color: white;
+            margin: 20%;
         }
         #botaodejogo {
             padding: 5px;
+            float: left;
         }
 
         #botaodejogo a {
